--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <path d="M256 0C114.836 0 0 114.836 0 256s114.836 256 256 256 256-114.836 256-256S397.164 0 256 0zm76.8 416c-17.673 0-32-14.327-32-32V288h-64v96c0 17.673-14.327 32-32 32s-32-14.327-32-32v-96h-16c-17.673 0-32-14.327-32-32v-96c0-17.673 14.327-32 32-32h224c17.673 0 32 14.327 32 32v96c0 17.673-14.327 32-32 32h-16v96c0 17.673-14.327 32-32 32zM176 176a16 16 0 1116-16 16.018 16.018 0 01-16 16zm160 0a16 16 0 1116-16 16.018 16.018 0 01-16 16z"/>
     </svg>
 
-    <a href="hopefundwallet.apk" download>
+    <a href="https://github.com/shemarxxx/hopefund-download/blob/main/public/hopefundwallet.apk" download>
       <button class="download-btn">Download App for Android</button>
     </a>
 
